Python/tests/unit_tests/donorimputation/output-sas/donorJ04_sas.txt
NOTE: PROCEDURE PRINTTO used (Total process time):
      real time           0.00 seconds
      cpu time            0.00 seconds
      

2223  proc donorimputation
2224     data=indata
2225     instatus=instat
2226     out=outdata
2227     outstatus=outstat
2228     donormap=map
2229     edits="Q1 + Q2 + Q3*Q4 = total;"
2230     postedits="Q1 + Q2 + Q3 + Q4 - total <= 0;"
2231     mindonors=1
2232     pcentdonors=1
2233     n=3
2234     matchfieldstat
2235     eligdon=any
2236     ;
2237     id ident;
2238     mustmatch STAFF;
2239     dataexclvar toexcl;
2240  run;

NOTE: --- Banff System 2.08.002 developed by Statistics Canada ---
NOTE: PROCEDURE DONORIMPUTATION Version 2.06.002
NOTE: Created on Jan 19 2022 at 13:40:59
NOTE: Email: banff@statcan.gc.ca
NOTE: 

NOTE: DATA = WORK.INDATA
NOTE: INSTATUS = WORK.INSTAT
NOTE: OUT = WORK.OUTDATA
NOTE: OUTSTATUS = WORK.OUTSTAT
NOTE: DONORMAP = WORK.MAP
NOTE: EDITS = Q1 + Q2 + Q3*Q4 = total;
NOTE: POSTEDITS = Q1 + Q2 + Q3 + Q4 - total <= 0;
NOTE: MINDONORS = 1
NOTE: PCENTDONORS = 1.00%
NOTE: N = 3
NOTE: NLIMIT not specified.
NOTE: MRL not specified.
NOTE: ELIGDON = ANY
NOTE: RANDOM not specified (random search of donors will not be performed)
NOTE: MATCHFIELDSTAT
NOTE: SEED = 1671572508 (value chosen by the system) 
NOTE: REJECTNEGATIVE (default)
NOTE: DISPLAYLEVEL = 0
NOTE: ID = ident
NOTE: DATAEXCLVAR = toexcl
NOTE: RANDNUMVAR not specified.
NOTE: MUSTMATCH = staff 
NOTE: BY not specified.

ERROR: Invalid EDITS..
ERROR: Edits parser: Looking for 'Coefficient' but found 'Variable' instead.
       
       Error at or before:
       Q1 + Q2 + Q3*Q4 = TOTAL;
                      ^
       
NOTE: The SAS System stopped processing this step because of errors.
WARNING: The data set WORK.OUTDATA may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTDATA was not replaced because this step was stopped.
WARNING: The data set WORK.OUTSTAT may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTSTAT was not replaced because this step was stopped.
WARNING: The data set WORK.MAP may be incomplete.  When this step was stopped there were 
         0 observations and 0 variables.
WARNING: Data set WORK.MAP was not replaced because this step was stopped.
NOTE: PROCEDURE DONORIMPUTATION used (Total process time):
      real time           0.07 seconds
      cpu time            0.00 seconds
      
2241  


2242  proc donorimputation
2243     data=indata
2244     instatus=instat
2245     out=outdata
2246     outstatus=outstat
2247     donormap=map
2248     edits="Q1 + Q2 + Q3/Q4 = total;"
2249     postedits="Q1 + Q2 + Q3 + Q4 - total <= 0;"
2250     mindonors=1
2251     pcentdonors=1
2252     n=3
2253     matchfieldstat
2254     eligdon=any
2255     ;
2256     id ident;
2257     mustmatch STAFF;
2258     dataexclvar toexcl;
2259  run;

NOTE: --- Banff System 2.08.002 developed by Statistics Canada ---
NOTE: PROCEDURE DONORIMPUTATION Version 2.06.002
NOTE: Created on Jan 19 2022 at 13:40:59
NOTE: Email: banff@statcan.gc.ca
NOTE: 

NOTE: DATA = WORK.INDATA
NOTE: INSTATUS = WORK.INSTAT
NOTE: OUT = WORK.OUTDATA
NOTE: OUTSTATUS = WORK.OUTSTAT
NOTE: DONORMAP = WORK.MAP
NOTE: EDITS = Q1 + Q2 + Q3/Q4 = total;
NOTE: POSTEDITS = Q1 + Q2 + Q3 + Q4 - total <= 0;
NOTE: MINDONORS = 1
NOTE: PCENTDONORS = 1.00%
NOTE: N = 3
NOTE: NLIMIT not specified.
NOTE: MRL not specified.
NOTE: ELIGDON = ANY
NOTE: RANDOM not specified (random search of donors will not be performed)
NOTE: MATCHFIELDSTAT
NOTE: SEED = 1671572509 (value chosen by the system) 
NOTE: REJECTNEGATIVE (default)
NOTE: DISPLAYLEVEL = 0
NOTE: ID = ident
NOTE: DATAEXCLVAR = toexcl
NOTE: RANDNUMVAR not specified.
NOTE: MUSTMATCH = staff 
NOTE: BY not specified.

ERROR: Invalid EDITS..
ERROR: Edits parser: Looking for 'Operator' but found 'Unknown character' instead.
       
       Error at or before:
       Q1 + Q2 + Q3/Q4 = TOTAL;
                    ^
       
NOTE: The SAS System stopped processing this step because of errors.
WARNING: The data set WORK.OUTDATA may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTDATA was not replaced because this step was stopped.
WARNING: The data set WORK.OUTSTAT may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTSTAT was not replaced because this step was stopped.
WARNING: The data set WORK.MAP may be incomplete.  When this step was stopped there were 
         0 observations and 0 variables.
WARNING: Data set WORK.MAP was not replaced because this step was stopped.
NOTE: PROCEDURE DONORIMPUTATION used (Total process time):
      real time           0.06 seconds
      cpu time            0.01 seconds
      
2260  


2261  proc donorimputation
2262     data=indata
2263     instatus=instat
2264     out=outdata
2265     outstatus=outstat
2266     donormap=map
2267     edits="Q1 + Q2 + Q3 + Q4 = 1/total;"
2268     postedits="Q1 + Q2 + Q3 + Q4 - total <= 0;"
2269     mindonors=1
2270     pcentdonors=1
2271     n=3
2272     matchfieldstat
2273     eligdon=any
2274     ;
2275     id ident;
2276     mustmatch STAFF;
2277     dataexclvar toexcl;
2278  run;

NOTE: --- Banff System 2.08.002 developed by Statistics Canada ---
NOTE: PROCEDURE DONORIMPUTATION Version 2.06.002
NOTE: Created on Jan 19 2022 at 13:40:59
NOTE: Email: banff@statcan.gc.ca
NOTE: 

NOTE: DATA = WORK.INDATA
NOTE: INSTATUS = WORK.INSTAT
NOTE: OUT = WORK.OUTDATA
NOTE: OUTSTATUS = WORK.OUTSTAT
NOTE: DONORMAP = WORK.MAP
NOTE: EDITS = Q1 + Q2 + Q3 + Q4 = 1/total;
NOTE: POSTEDITS = Q1 + Q2 + Q3 + Q4 - total <= 0;
NOTE: MINDONORS = 1
NOTE: PCENTDONORS = 1.00%
NOTE: N = 3
NOTE: NLIMIT not specified.
NOTE: MRL not specified.
NOTE: ELIGDON = ANY
NOTE: RANDOM not specified (random search of donors will not be performed)
NOTE: MATCHFIELDSTAT
NOTE: SEED = 1671572509 (value chosen by the system) 
NOTE: REJECTNEGATIVE (default)
NOTE: DISPLAYLEVEL = 0
NOTE: ID = ident
NOTE: DATAEXCLVAR = toexcl
NOTE: RANDNUMVAR not specified.
NOTE: MUSTMATCH = staff 
NOTE: BY not specified.

ERROR: Invalid EDITS..
ERROR: Edits parser: Looking for 'SemiColon' but found 'Unknown character' instead.
       
       Error at or before:
       Q1 + Q2 + Q3 + Q4 = 1/TOTAL;
                             ^
       
NOTE: The SAS System stopped processing this step because of errors.
WARNING: The data set WORK.OUTDATA may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTDATA was not replaced because this step was stopped.
WARNING: The data set WORK.OUTSTAT may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTSTAT was not replaced because this step was stopped.
WARNING: The data set WORK.MAP may be incomplete.  When this step was stopped there were 
         0 observations and 0 variables.
WARNING: Data set WORK.MAP was not replaced because this step was stopped.
NOTE: PROCEDURE DONORIMPUTATION used (Total process time):
      real time           0.06 seconds
      cpu time            0.00 seconds
      


2279  proc printto;
2280  run;

